--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.0-RC3</conventions.version>
+        <conventions.version>1.0.0</conventions.version>
         <!-- arquillian extensions -->
         <version.selenium>2.40.0</version.selenium>
         <version.drone>1.3.0.Final</version.drone>
@@ -44,12 +44,10 @@
         <dependency>
             <groupId>org.conventionsframework</groupId>
             <artifactId>conventions-core</artifactId>
-            <version>${conventions.version}</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>4.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
