--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.1-SNAPSHOT</conventions.version>
+        <conventions.version>1.0.1</conventions.version>
         <!-- arquillian extensions -->
         <version.selenium>2.40.0</version.selenium>
         <version.drone>1.3.0.Final</version.drone>
