--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.1</conventions.version>
+        <conventions.version>1.0.2</conventions.version>
         <!-- arquillian extensions -->
         <version.selenium>2.40.0</version.selenium>
-        <version.drone>1.3.0.Final</version.drone>
+        <version.drone>2.0.0.Alpha1</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.2.Final</version.graphene>
         <version.warp>1.0.0.Alpha7</version.warp>
@@ -48,6 +48,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
+            <version>4.0</version> <!-- override conventions bom version-->
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
@@ -199,7 +200,7 @@
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-phantom-driver</artifactId>
-            <version>1.1.0.Final</version>
+            <version>1.1.2.Final</version>
             <scope>test</scope>
         </dependency>
         <!-- arquillian jbehave -->
@@ -694,7 +695,7 @@
                             </environmentVariables>
                         </configuration>
                     </plugin>
-                    <!--plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-dependency-plugin</artifactId>
                         <executions>
@@ -718,7 +719,7 @@
                                 </configuration>
                             </execution>
                         </executions>
-                    </plugin-->
+                    </plugin>
                 </plugins>
             </build>
         </profile>
