--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <conventions.version>1.0.3</conventions.version>
         <!-- arquillian extensions -->
-        <version.selenium>2.40.0</version.selenium>
+        <version.selenium>2.41.0</version.selenium>
         <version.drone>2.0.0.Alpha1</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.2.Final</version.graphene>
@@ -164,13 +164,13 @@
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-persistence-api</artifactId>
-            <version>1.0.0.Alpha6</version>
+            <version>1.0.0.Alpha7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-persistence-impl</artifactId>
-            <version>1.0.0.Alpha6</version>
+            <artifactId>arquillian-persistence-dbunit</artifactId>
+            <version>1.0.0.Alpha7</version>
             <scope>test</scope>
         </dependency>
 
@@ -543,6 +543,7 @@
                         <version>2.16</version>
                         <configuration>
                             <skipTests>false</skipTests>
+                            <runOrder>reversealphabetical</runOrder>
                             <includes>
                                 <include>**/*It.java</include>
                             </includes>
@@ -646,12 +647,10 @@
         <profile>
             <id>jboss-remote</id>
             <properties>
-                <arquillian.testContainer>jboss-remote</arquillian.testContainer>
                 <datasource>java:jboss/datasources/ExampleDS2</datasource>
                 <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
                 </hibernate.platform>
                 <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
-                <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
             </properties>
             <dependencies>
                 <dependency>
@@ -661,6 +660,20 @@
                     <version>7.2.0.Final</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>jboss-remote</arquillian.launch>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>jboss-managed</id>
@@ -687,11 +700,11 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.16</version>
                         <configuration>
-                            <systemPropertyVariables>
+                            <systemPropertyVariables>x'
                                 <arquillian.launch>jboss-managed</arquillian.launch>
                             </systemPropertyVariables>
                             <environmentVariables>
-                                <JBOSS_HOME>${arquillian.serverHome}</JBOSS_HOME>
+                                <JBOSS_HOME>${project.build.directory}/jboss-as-${jboss.version}</JBOSS_HOME>
                             </environmentVariables>
                         </configuration>
                     </plugin>
@@ -853,7 +866,7 @@
         <profile>
             <id>jacoco</id>
             <properties>
-                <jacoco.version>0.7.0.201403182114</jacoco.version>
+                <jacoco.version>0.7.1.201405082137</jacoco.version>
             </properties>
             <dependencies>
                 <dependency>
