--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,14 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.0.3</conventions.version>
+        <conventions.version>1.0.4</conventions.version>
         <!-- arquillian extensions -->
-        <version.selenium>2.40.0</version.selenium>
+        <version.selenium>2.41.0</version.selenium>
         <version.drone>2.0.0.Alpha1</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.2.Final</version.graphene>
         <version.warp>1.0.0.Alpha7</version.warp>
+        <version.persistence>1.0.0.Alpha7</version.persistence>
         <version.recorder>1.0.0.Alpha2</version.recorder>
         <!--arquillian properties -->
         <arquillian.serverHome>/home/rmpestano/jboss-eap-6.1</arquillian.serverHome>
@@ -48,20 +49,50 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>4.0</version> <!-- override conventions bom version-->
-        </dependency>
-        <dependency>
-            <groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
-            <artifactId>myfaces-extcdi-bundle-jsf20</artifactId>
+            <version>4.0</version>
+            <!-- override conventions bom version-->
         </dependency>
         <dependency>
             <groupId>org.primefaces.themes</groupId>
             <artifactId>all-themes</artifactId>
         </dependency>
+        <!-- codi -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
+            <groupId>org.apache.myfaces.extensions.cdi.bundles</groupId>
+            <artifactId>myfaces-extcdi-bundle-jsf20</artifactId>
         </dependency>
+        <!--dependency>
+            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
+            <artifactId>myfaces-extcdi-jsf20-module-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.cdi.modules</groupId>
+            <artifactId>myfaces-extcdi-jsf20-module-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
+            <artifactId>myfaces-extcdi-core-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extensions.cdi.core</groupId>
+            <artifactId>myfaces-extcdi-core-api</artifactId>
+        </dependency-->
+
+        <!-- deltaspike  commented because https://issues.apache.org/jira/browse/DELTASPIKE-590
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jsf-module-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jsf-module-impl</artifactId>
+        </dependency>
+           -->
+
 
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -164,13 +195,13 @@
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-persistence-api</artifactId>
-            <version>1.0.0.Alpha6</version>
+            <version>1.0.0.Alpha7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-persistence-impl</artifactId>
-            <version>1.0.0.Alpha6</version>
+            <artifactId>arquillian-persistence-dbunit</artifactId>
+            <version>1.0.0.Alpha7</version>
             <scope>test</scope>
         </dependency>
 
@@ -224,18 +255,18 @@
         </dependency-->
 
         <!-- warp -->
-		<dependency>
-			<groupId>org.jboss.arquillian.extension</groupId>
-			<artifactId>arquillian-warp</artifactId>
-			<type>pom</type>
-			<scope>test</scope>
-			<version>${version.warp}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jboss.arquillian.extension</groupId>
-			<artifactId>arquillian-warp-jsf</artifactId>
-			<version>${version.warp}</version>
-		</dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-warp</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+            <version>${version.warp}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-warp-jsf</artifactId>
+            <version>${version.warp}</version>
+        </dependency>
 
 
         <dependency>
@@ -526,6 +557,7 @@
                                 <exclude>**/*BaseFt.java</exclude>
                                 <exclude>**/*BaseBdd.java</exclude>
                                 <exclude>**/*BaseAt.java</exclude>
+                                <exclude>**/*HelloArquillianIt.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -570,6 +602,32 @@
                             </includes>
                             <excludes>
                                 <exclude>**/*BaseFt.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- it and ft tests-->
+            <id>it-ft-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <runOrder>reversealphabetical</runOrder>
+                            <includes>
+                                <include>**/*Ft.java</include>
+                                <include>**/*It.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*BaseFt.java</exclude>
+                                <exclude>**/*BaseIt.java</exclude>
+                                <exclude>**/*HelloArquillianIt.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -661,6 +719,53 @@
                     <version>7.2.0.Final</version>
                 </dependency>
             </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>jboss-remote</arquillian.launch>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>wildfly-remote</id>
+            <properties>
+                <datasource>java:jboss/datasources/ExampleDS2</datasource>
+                <hibernate.platform>org.hibernate.service.jta.platform.internal.JBossAppServerJtaPlatform
+                </hibernate.platform>
+                <hibernate.provider>org.hibernate.ejb.HibernatePersistence</hibernate.provider>
+                <!--referenced by arquillian.launch and used in arquillian.xml to choice which container arquillian will use-->
+            </properties>
+            <dependencies>
+                <dependency>
+                    <groupId>org.wildfly</groupId>
+                    <artifactId>wildfly-arquillian-container-remote</artifactId>
+                    <scope>test</scope>
+                    <version>8.1.0.CR1</version>
+                </dependency>
+            </dependencies>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <arquillian.launch>wildfly-remote</arquillian.launch>
+                            </systemPropertyVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>jboss-managed</id>
@@ -853,7 +958,7 @@
         <profile>
             <id>jacoco</id>
             <properties>
-                <jacoco.version>0.7.0.201403182114</jacoco.version>
+                <jacoco.version>0.7.1.201405082137</jacoco.version>
             </properties>
             <dependencies>
                 <dependency>
