--- a/pom.xml
+++ b/pom.xml
@@ -696,7 +696,77 @@
                 </plugins>
             </build>
         </profile>
+        <!-- profiles for build pipeline -->
+        <profile>
+            <!-- white box - it + bdd tests -->
+            <id>whitebox</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/*It.java</include>
+                                <include>**/*Bdd.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*BaseIt.java</exclude>
+                                <exclude>**/*BaseBdd.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- smoke tests, executed after app is deployed to check basic services are working -->
+            <id>smoke</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/*SmokeTest.java</include>
+                            </includes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <!-- black box - at + ft tests -->
+            <id>blackbox</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.16</version>
+                        <configuration>
+                            <skipTests>false</skipTests>
+                            <includes>
+                                <include>**/*Ft.java</include>
+                                <include>**/*At.java</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/*BaseFt.java</exclude>
+                                <exclude>**/*BaseAt.java</exclude>
+                            </excludes>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
 
+
+        <!-- arquillian containers -->
         <profile>
             <id>jboss-remote</id>
             <properties>
@@ -943,6 +1013,35 @@
                                 <JBOSS_HOME>${arquillian.serverHome}</JBOSS_HOME>
                             </environmentVariables>
                         </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <!-- pmd -->
+        <profile>
+            <id>pmd</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-pmd-plugin</artifactId>
+                        <version>3.1</version>
+                        <configuration>
+                            <minimumTokens>100</minimumTokens>
+                            <verbose>true</verbose>
+                            <rulesets>
+                                <ruleset>src/test/resources/config/pmd.xml</ruleset>
+                            </rulesets>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
