--- a/pom.xml
+++ b/pom.xml
@@ -12,12 +12,12 @@
     <properties>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <conventions.version>1.1.3</conventions.version>
+        <conventions.version>1.2.0</conventions.version>
         <!-- arquillian extensions -->
         <version.selenium>2.41.0</version.selenium>
-        <version.drone>2.0.0.Alpha1</version.drone>
+        <version.drone>1.3.0.Final</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
-        <version.graphene>2.0.2.Final</version.graphene>
+        <version.graphene>2.0.3.Final</version.graphene>
         <version.warp>1.0.0.Alpha7</version.warp>
         <version.persistence>1.0.0.Alpha7</version.persistence>
         <version.recorder>1.0.0.Alpha2</version.recorder>
@@ -31,7 +31,7 @@
         <arquillian.seleniumGrid>http://remote-selenium-hub:1035/wd/hub</arquillian.seleniumGrid>
         <!-- servers -->
         <jboss.version>7.2.0.Final</jboss.version>
-        <wildfly.version>8.0.0.Final</wildfly.version>
+        <wildfly.version>8.1.0.Final</wildfly.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
         <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
         <!-- sonar -->
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
-            <version>4.0</version>
+            <!--<version>5.0</version>-->
             <!-- override conventions bom version-->
         </dependency>
         <dependency>
