--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <conventions.version>1.3.1</conventions.version>
         <!-- arquillian extensions -->
         <version.selenium>2.41.0</version.selenium>
-        <version.drone>1.3.0.Final</version.drone>
+        <version.drone>1.3.1.Final</version.drone>
         <version.arquillian>1.1.4.Final</version.arquillian>
         <version.graphene>2.0.3.Final</version.graphene>
         <version.warp>1.0.0.Alpha7</version.warp>
@@ -31,7 +31,7 @@
         <arquillian.seleniumGrid>http://remote-selenium-hub:1035/wd/hub</arquillian.seleniumGrid>
         <!-- servers -->
         <jboss.version>7.2.0.Final</jboss.version>
-        <wildfly.version>8.1.0.Final</wildfly.version>
+        <wildfly.version>8.0.0.Final</wildfly.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
         <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
         <!-- sonar -->
@@ -45,6 +45,7 @@
         <dependency>
             <groupId>org.conventionsframework</groupId>
             <artifactId>conventions-core</artifactId>
+            <version>1.3.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
@@ -116,9 +117,10 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
-            <version>1.5.5</version>
+            <version>1.9.13</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-multipart-provider</artifactId>
