--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,3 @@
 language: java
 jdk: oraclejdk7
-script: mvn test -Pall-tests -Pwildfly-managed -Pwebdriver-phantomjs
+script: mvn test -Pwhitebox -Pwildfly-managed -Pjacoco
