--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <arquillian.seleniumGrid>http://remote-selenium-hub:1035/wd/hub</arquillian.seleniumGrid>
         <!-- servers -->
         <jboss.version>7.2.0.Final</jboss.version>
-        <wildfly.version>8.0.0.Final</wildfly.version>
+        <wildfly.version>8.1.0.Final</wildfly.version>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
         <maven.build.timestamp.format>dd/MM/yyyy HH:mm</maven.build.timestamp.format>
         <!-- sonar -->
@@ -196,13 +196,13 @@
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
             <artifactId>arquillian-persistence-api</artifactId>
-            <version>1.0.0.Alpha7</version>
+            <version>1.0.0.Alpha6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.extension</groupId>
-            <artifactId>arquillian-persistence-dbunit</artifactId>
-            <version>1.0.0.Alpha7</version>
+            <artifactId>arquillian-persistence-impl</artifactId>
+            <version>1.0.0.Alpha6</version>
             <scope>test</scope>
         </dependency>
 
@@ -857,7 +857,7 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.16</version>
                         <configuration>
-                            <systemPropertyVariables>x'
+                            <systemPropertyVariables>
                                 <arquillian.launch>jboss-managed</arquillian.launch>
                             </systemPropertyVariables>
                             <environmentVariables>
