--- a/pom.xml
+++ b/pom.xml
@@ -1080,8 +1080,8 @@
                                 <exclude>org/conventions/archetype/db/*.class</exclude>
                                 <exclude>org/conventions/archetype/bean/*.class</exclude>
                                 <exclude>org/conventions/archetype/converter/*.class</exclude>
-                                <exclude>org/conventions/archetype/util/AppConstants/*.class</exclude>
-                                <exclude>org/conventions/archetype/util/pages.class</exclude>
+                                <exclude>org/conventions/archetype/util/**/*AppConstants.class</exclude>
+                                <exclude>org/conventions/archetype/util/**Pages.class</exclude>
                             </excludes>
                         </configuration>
                         <executions>
@@ -1100,7 +1100,7 @@
                         </executions>
                     </plugin>
 
-                    <plugin>
+                    <!--plugin>
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
                         <version>2.0.1</version>
@@ -1116,7 +1116,7 @@
                                 <phase>install</phase>
                             </execution>
                         </executions>
-                    </plugin>
+                    </plugin-->
                 </plugins>
             </build>
         </profile>
