--- a/pom.xml
+++ b/pom.xml
@@ -1100,7 +1100,7 @@
                         </executions>
                     </plugin>
 
-                    <!--plugin>
+                    <plugin>
                         <groupId>org.eluder.coveralls</groupId>
                         <artifactId>coveralls-maven-plugin</artifactId>
                         <version>2.0.1</version>
@@ -1116,7 +1116,7 @@
                                 <phase>install</phase>
                             </execution>
                         </executions>
-                    </plugin-->
+                    </plugin>
                 </plugins>
             </build>
         </profile>
