--- a/pom.xml
+++ b/pom.xml
@@ -709,9 +709,11 @@
                         <version>2.16</version>
                         <configuration>
                             <skipTests>false</skipTests>
+                            <runOrder>reversealphabetical</runOrder>
                             <includes>
                                 <include>**/*It.java</include>
                                 <include>**/*Bdd.java</include>
+                                <include>**/*Suite.java</include>
                             </includes>
                             <excludes>
                                 <exclude>**/*BaseIt.java</exclude>
@@ -759,6 +761,7 @@
                             <excludes>
                                 <exclude>**/*BaseFt.java</exclude>
                                 <exclude>**/*BaseAt.java</exclude>
+                                <exclude>**/*Suite.java</exclude>
                             </excludes>
                         </configuration>
                     </plugin>
@@ -1078,9 +1081,11 @@
                         <configuration>
                             <excludes>
                                 <exclude>org/conventions/archetype/db/*.class</exclude>
+                                <exclude>org/conventions/archetype/model/*States.class</exclude>
                                 <exclude>org/conventions/archetype/bean/*.class</exclude>
                                 <exclude>org/conventions/archetype/converter/*.class</exclude>
-                                <exclude>org/conventions/archetype/util/**/*AppConstants.class</exclude>
+                                <exclude>org/conventions/archetype/util/*AppConstants.class</exclude>
+                                <exclude>org/conventions/archetype/util/*AppConstants**.class</exclude>
                                 <exclude>org/conventions/archetype/util/**Pages.class</exclude>
                             </excludes>
                         </configuration>
@@ -1099,26 +1104,34 @@
                             </execution>
                         </executions>
                     </plugin>
-
-                    <plugin>
-                        <groupId>org.eluder.coveralls</groupId>
-                        <artifactId>coveralls-maven-plugin</artifactId>
-                        <version>2.0.1</version>
-                        <configuration>
-                            <repoToken>qNIdoZKsxqS7s1ZlSpg2bAsCMQ4CGyc34</repoToken>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>coveralls-jacoco</id>
-                                <goals>
-                                    <goal>jacoco</goal>
-                                </goals>
-                                <phase>install</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
                 </plugins>
             </build>
+        </profile>
+
+        <profile>
+            <id>coveralls</id>
+             <build>
+                 <plugins>
+                     <plugin>
+                         <groupId>org.eluder.coveralls</groupId>
+                         <artifactId>coveralls-maven-plugin</artifactId>
+                         <version>2.0.1</version>
+                         <configuration>
+                             <repoToken>qNIdoZKsxqS7s1ZlSpg2bAsCMQ4CGyc34</repoToken>
+                         </configuration>
+                         <executions>
+                             <execution>
+                                 <id>coveralls-jacoco</id>
+                                 <goals>
+                                     <goal>jacoco</goal>
+                                 </goals>
+                                 <phase>install</phase>
+                             </execution>
+                         </executions>
+                     </plugin>
+                 </plugins>
+
+             </build>
         </profile>
 
         <!-- selenium web drivers -->
