bd tests fix - force travis dep download

--- a/pom.xml
+++ b/pom.xml
@@ -231,10 +231,18 @@
             <scope>test</scope>
         </dependency>
 		
-		 <dependency>
+	<!-- force travis download deps -->
+	<dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>13.0.1</version>
+            <scope>provided</scope>
+        </dependency>
+	 
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>3.7.5</version>
             <scope>provided</scope>
         </dependency>
 		 
